# break-all-the-rules

./: LICENSE  README.md  break-all-the-rules.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/003b8552/: cabal_macros.h
.stack-work/ghci/0ed93ff8/: cabal_macros.h
.stack-work/ghci/41659923/: cabal_macros.h
.stack-work/ghci/458c7672/: cabal_macros.h
.stack-work/ghci/6b45c90e/: cabal_macros.h
.stack-work/ghci/b7d2bf54/: cabal_macros.h
.stack-work/install/x86_64-osx/51807da34ea54276b0cc68a7ea83d1818b5b62a3affc2325735b7d2e3022b2b7/8.10.7/lib/x86_64-osx-ghc-8.10.7/break-all-the-rules-0.1.0.0-7SIEsgxtcy0qxcmdEpWP9/: BreakAllTheRules.hi
.stack-work/install/x86_64-osx/51807da34ea54276b0cc68a7ea83d1818b5b62a3affc2325735b7d2e3022b2b7/8.10.7/lib/x86_64-osx-ghc-8.10.7/break-all-the-rules-0.1.0.0-7SIEsgxtcy0qxcmdEpWP9/Data/String/: Strip.hi
.stack-work/install/x86_64-osx/51807da34ea54276b0cc68a7ea83d1818b5b62a3affc2325735b7d2e3022b2b7/8.10.7/lib/x86_64-osx-ghc-8.10.7/break-all-the-rules-0.1.0.0-BSKr9D5uqzfD7O2UVaCkqi/: BreakAllTheRules.hi
.stack-work/install/x86_64-osx/51807da34ea54276b0cc68a7ea83d1818b5b62a3affc2325735b7d2e3022b2b7/8.10.7/pkgdb/: break-all-the-rules-0.1.0.0-BSKr9D5uqzfD7O2UVaCkqi.conf  package.cache
src/: BreakAllTheRules.hs
test/: BreakAllTheRulesSpec.hs
