name:                break-all-the-rules
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/break-all-the-rules#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                    ,  BreakAllTheRules
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable break-all-the-rules
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , break-all-the-rules
  default-language:    Haskell2010

test-suite break-all-the-rules-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , break-all-the-rules
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/break-all-the-rules
